Closed
Bug 282700
Opened 21 years ago
Closed 21 years ago
allocation/free mismatch of gParts and gVariants in nsMathMLChar.cpp
Categories
(Core :: MathML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: david, Assigned: david)
References
Details
Attachments
(1 file)
|
1.58 KB,
patch
|
rbs
:
review+
rbs
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.5) Gecko/20041107 Firefox/1.0
PREfast reports the following warnings when analysing this file:
nsmathmlchar.cpp(1172) : warning 283: Allocation/free mismatch:
'?gParts@nsGlyphTableList@@2PAHA' is allocated with array new [], but deleted
with scalar delete (see allocation at line 1163 of
d:\mozilla\mozilla\layout\mathml\base\src\nsmathmlchar.cpp).
problem occurs in function 'InitGlobals'
nsmathmlchar.cpp(1173) : warning 283: Allocation/free mismatch:
'?gVariants@nsGlyphTableList@@2PAHA' is allocated with array new [], but deleted
with scalar delete (see allocation at line 1164 of
d:\mozilla\mozilla\layout\mathml\base\src\nsmathmlchar.cpp).
problem occurs in function 'InitGlobals'
Reproducible: Always
Steps to Reproduce:
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #174671 -
Flags: review?(rbs)
Comment on attachment 174671 [details] [diff] [review]
use array delete for stuff that was array new'd.
r+sr=rbs
Attachment #174671 -
Flags: superreview+
Attachment #174671 -
Flags: review?(rbs)
Attachment #174671 -
Flags: review+
Comment 3•21 years ago
|
||
rbs, are you going to check this in, or should I?
Updated•21 years ago
|
Assignee: rbs → david.gardiner
Comment 5•21 years ago
|
||
Checked in for 1.8b2. Thanks for the patch, David!
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•