Fix delete calls to match the new calls (use delete[]).  Bug 282700, patch by David Gardiner <david.gardiner@unisa.edu.au>, r+sr=rbs